# TellMeWithoutTellingMe_Excercise

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
src/src/: settings.py  urls.py
src/src/containers/: __init__.py
src/src/services/: __init__.py  file_services.py
src/tellme/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/tellme/managers/: score_manager.py
src/tellme/migrations/: 0001_initial.py  0002_remove_category_items_item_category.py  0003_category_description.py  0004_remove_score_player_score_name.py  0005_alter_score_category.py  0006_remove_score_answer_score_score.py  0007_category_image_link.py
src/tellme/queryset/: __init__.py  score_queryset.py
src/tellme/templates/: index.html
src/tellme/tests/: __init__.py  test_category.py  test_gameplay.py  test_item.py  test_views.py
src/tellme/views/: __init__.py  category_view.py  item_view.py  score_view.py
