[tool.poetry]
name = "tellmewithouttellingme_excercise"
version = "0.1.0"
description = ""
authors = ["John Albert Balansag <johnalbert.balansag@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.5"
django-rest-framework = "^0.1.0"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
